--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
     "/js/pages/HomeIndexPage.js": "/js/pages/HomeIndexPage.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/js/pages/HomeSecondPage.js": "/js/pages/HomeSecondPage.js"
 }
